# joe_project

./: .gitignore  README.md  config.yaml  data.dvc  evaluate.dockerfile  pyproject.toml  requirements.txt  tasks.py  train.dockerfile
.dvc/: config
.github/workflows/: tests.yaml
app/: ___init__.py  main.py  ml_app.py
configs/: sweep.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.pth
src/joe_project/: data.py  evaluate.py  model.py  train.py  visualize.py
tests/: __init__.py  test_data.py  test_model.py
tests/integrationtests/: test_api.py
wandb/: latest-run
wandb/run-20250109_133205-8yqm3ywy/: run-8yqm3ywy.wandb
wandb/run-20250109_133205-8yqm3ywy/files/: wandb-metadata.json  wandb-summary.json
wandb/run-20250109_133525-vmskry5m/: run-vmskry5m.wandb
wandb/run-20250109_133525-vmskry5m/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250109_133849-cnpcvmsj/: run-cnpcvmsj.wandb
wandb/run-20250109_133849-cnpcvmsj/files/: requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20250109_133921-ea3thwlg/: run-ea3thwlg.wandb
wandb/run-20250109_133921-ea3thwlg/files/: wandb-metadata.json  wandb-summary.json
wandb/run-20250109_134007-uy609zmz/: run-uy609zmz.wandb
wandb/run-20250109_134007-uy609zmz/files/: config.yaml  (+2 more)
wandb/run-20250109_134215-aaayfbx8/: run-aaayfbx8.wandb
wandb/run-20250109_134445-74mvq8od/: run-74mvq8od.wandb
wandb/run-20250109_135046-5ydt11um/: run-5ydt11um.wandb
wandb/run-20250110_084520-jutz7m76/: run-jutz7m76.wandb
(+12 files in other folders)
