[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "joe_project"
version = "0.0.1"
description = "exercise M6"
authors = [
  { name = "Johanne", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
lint.select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
preprocess = "joe_project.data:preprocess_data"
model = "joe_project.model:define_model"
train = "joe_project.train:train"
evaluate = "joe_project.evaluate:evaluate"
visualize = "joe_project.visualize:visualize"
